refactor(clamp): replace min/max clamp patterns with Math.clamp
- replace clamp logic in DockGraph and DockTabPane

- inline Math.clamp in DockLayoutEngine

- remove obsolete clampZoneSize helper